# Laundry-management-System

./: .gitignore  README.md
backend/: create_dummy.py  main.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/auth/: dependencies.py  hashing.py  jwt_handler.py  permissions.py  test_hash.py  test_jwt.py
backend/models/: attendant.py  enums.py  order.py  order_item.py  service.py  student.py  user.py
backend/schemas/: attendant.py  dashboard.py  order.py  service.py  student.py  user.py
frontend/laundry_ms/: index.html  package-lock.json  package.json
frontend/laundry_ms/src/: App.jsx  index.css
frontend/laundry_ms/src/components/: DashboardLayout.jsx
frontend/laundry_ms/src/pages/: RootPortal.jsx
frontend/laundry_ms/src/pages/admin/: AdminDashboard.jsx
frontend/laundry_ms/src/pages/attendant/: AttendantDashboard.jsx
frontend/laundry_ms/src/pages/auth/: AdminLogin.jsx  AttendantLogin.jsx  StudentLogin.jsx
frontend/laundry_ms/src/pages/student/: StudentDashboard.jsx
frontend/laundry_ms/src/utils/: api.js
